# SMC-Stronghold-Generator

./: .gitignore  AbstractStrongholdPieces.hpp  CMakeLists.txt  Directions.hpp  Hash.hpp  LICENSE  MutableBoundingBox.hpp  OpenMPWrapper.hpp  PendingBitset.hpp  README.md  SortedVectorMap.hpp  StrongholdAPFManager.hpp  StrongholdAuxiliaryInfo.hpp  StrongholdGammaMM.hpp  StrongholdObservationJson.hpp  StrongholdObservationUtils.hpp  StrongholdObservations.hpp  StrongholdPieceInfo.hpp  StrongholdPieceWeight.hpp  StrongholdPieces.hpp  StrongholdSMC.hpp  StrongholdStatistics.hpp  StrongholdStatsPlotter.py  StrongholdStructure.hpp  StrongholdVerifier.hpp  StructurePieces.hpp  THIRD_PARTY_NOTICES.txt  UnreachableWrapper.hpp  Xoshiro256PlusPlus.hpp  main.cpp  stronghold-cli.cpp  stronghold-plotter.spec
.github/workflows/: build.yml  ci.yml
